Ajout du include cleanup.php pour nettoyer WordPress core

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name:   House Of Brands
 Theme URI:    https://houseofbrands.fr
 Author:       Salim Adila
 Author URI:   https://houseofbrands.fr
-Description:  Thème ultra-léger basé sur Underscores pour House Of Brands
+Description:  Thème ultra-léger par House Of Brands
 Version:      1.0
 License:      GNU General Public License v2 or later
 License URI:  https://www.gnu.org/licenses/gpl-2.0.html
