--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -133,6 +133,39 @@ body {
   color: #000;
 }
 
+
+h1{
+  font-size: 2rem;
+  margin: 1.5rem 0 1rem;
+}
+
+h2 {
+  font-size: 1.75rem;
+  margin: 1.25rem 0 0.75rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+  margin: 1rem 0 0.5rem;
+}
+
+h4 {
+  font-size: 1.25rem;
+  margin: 0.75rem 0 0.5rem;
+}
+
+h5 {
+  font-size: 1rem;
+  margin: 0.5rem 0 0.25rem;
+}
+
+h6 {
+  font-size: 0.875rem;
+  margin: 0.5rem 0 0.25rem;
+  color: #555;
+}
+
+
 .hob-page-body h1, .hob-page-body .wp-block-heading[role="heading"] {
   font-size: 2rem;
   margin: 1.5rem 0 1rem;
